@@ -19,6 +19,8 @@ ikiwiki (2.55) UNRELEASED; urgency=low
     some situations.
   * Don't allow uploading an attachment with the same name as an existing
     page, to avoid confusion.
+  * Split out error messages from editpage.tmpl into several separate
+    templates.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400
 
